# ab-testing-platform

./: .gitignore  LICENSE  Makefile  README.md  README.ru.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: i18n.py  streamlit_app.py  theme.py
app/pages/: 1_Simulator.py  2_Significance.py  3_Sequential.py  4_Power_and_MDE.py  5_History.py
docs/: methodology.md
examples/: quickstart.py
scripts/: make_figures.py
src/abtest/: __init__.py  datamodel.py  frequentist.py  power.py  sequential.py  simulation.py  storage.py
tests/: test_app_smoke.py  test_frequentist.py  test_power.py  test_sequential.py  test_simulation.py  test_storage.py
