[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abtest-platform"
version = "0.1.0"
description = "A self-contained A/B testing statistical-significance platform with sequential testing and power analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Egor Makarov" }]
keywords = ["ab-testing", "statistics", "sequential-testing", "power-analysis", "experimentation"]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "pandas>=2.0",
    "plotly>=5.18",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.urls]
Homepage = "https://github.com/your-username/abtest-platform"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["abtest"]
